[gd_scene format=3 uid="uid://cpwk7hp3gegy2"]

[ext_resource type="Script" uid="uid://dwg78liwn4peh" path="res://upgrade_screen.gd" id="1_adbc8"]

[node name="UpgradeScreen" type="Control" unique_id=1731244684]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_adbc8")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1953594450]
layout_mode = 0
offset_right = 800.0
offset_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.13725491, 0.3372549, 0.38431373, 1)

[node name="Resources" type="Label" parent="." unique_id=1514041340]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_right = 400.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "$10"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1173983627]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.0
offset_top = -64.0
offset_right = 87.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 7

[node name="Upgrades" type="Label" parent="VBoxContainer" unique_id=1564129074]
layout_mode = 2
text = "Upgrades:"
horizontal_alignment = 1

[node name="UpgradeBarrier" type="Button" parent="VBoxContainer" unique_id=1384861101]
layout_mode = 2
text = "Reinforce Barrier - $1"

[node name="UpgradeWeapon" type="Button" parent="VBoxContainer" unique_id=1069134978]
layout_mode = 2
text = "Upgrade Weapon - $1"

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=131438944]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -23.5
offset_bottom = 23.5
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="NextLevel" type="Button" parent="MarginContainer" unique_id=1777829776]
layout_mode = 2
size_flags_horizontal = 8
text = "Start Level 2"

[node name="VBoxContainer2" type="VBoxContainer" parent="." unique_id=1624048173]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -54.0
grow_horizontal = 2
grow_vertical = 0

[node name="UpgradeProgress" type="Label" parent="VBoxContainer2" unique_id=1076886415]
layout_mode = 2
text = "Next Upgrade:"
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer2" unique_id=223724636]
layout_mode = 2
size_flags_vertical = 1
max_value = 6.0
step = 1.0
rounded = true

[node name="VBoxContainer3" type="VBoxContainer" parent="." unique_id=97353406]
layout_mode = 1
offset_right = 167.0
offset_bottom = 142.0

[node name="Label" type="Label" parent="VBoxContainer3" unique_id=1827518634]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Stats:"

[node name="ProjectileDamageLabel" type="Label" parent="VBoxContainer3" unique_id=249980422]
layout_mode = 2
text = "Projectile Damage: 1"

[node name="ProjectileCountLabel" type="Label" parent="VBoxContainer3" unique_id=1697071050]
layout_mode = 2
text = "Projectile Count: 1"

[node name="CastSpeedLabel" type="Label" parent="VBoxContainer3" unique_id=1575587497]
layout_mode = 2
text = "Cast Speed: 0.4"

[node name="BarricadeHealth" type="Label" parent="VBoxContainer3" unique_id=1432747516]
layout_mode = 2
text = "Barricade Health: 100"

[connection signal="pressed" from="VBoxContainer/UpgradeBarrier" to="." method="_on_upgrade_barricade_pressed"]
[connection signal="pressed" from="VBoxContainer/UpgradeWeapon" to="." method="_on_upgrade_weapon_pressed"]
[connection signal="pressed" from="MarginContainer/NextLevel" to="." method="_on_next_level_pressed"]
